[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Scenes/FTQ_Scene04/FTQ_Scene04.gd" type="Script" id=2]

[node name="FTQ_Scene04" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="FTQ_CustomLabel_01" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -20.0
margin_right = 380.0
margin_bottom = 20.0

[node name="FTQ_CustomLabel_02" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -20.0
margin_right = 380.0
margin_bottom = 20.0

[node name="FTQ_CustomLabel_03" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -20.0
margin_right = 380.0
margin_bottom = 20.0

[node name="FTQ_CustomLabel_04" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -20.0
margin_right = 380.0
margin_bottom = 20.0
